fix mui table height issue overflow of rows

--- a/frontend/src/components/MyOrders/MyOrders.css
+++ b/frontend/src/components/MyOrders/MyOrders.css
@@ -3,6 +3,6 @@
     max-width: 100%;
     padding: 5vmax 7vmax;
     box-sizing: border-box;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
 }
